--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Giáo dục giới tính sớm để ngăn 'trẻ em sinh ra trẻ em'",
+    "content": "Bài viết đề cập đến việc cần thiết phải giáo dục giới tính sớm cho trẻ em nhằm ngăn chặn tình trạng 'trẻ em sinh ra trẻ em'. Theo ông Trần Đăng Khoa, Phó cục trưởng Cục Bà mẹ và Trẻ em, trẻ em hiện nay dậy thì sớm và có nguy cơ kết hôn và mang thai ở độ tuổi còn rất trẻ. Dự án cải thiện sức khỏe sinh sản và tình dục cho thanh thiếu niên đã cho thấy nhiều tiến bộ trong việc nâng cao kiến thức về sức khỏe sinh sản và tình dục cho trẻ em và phụ huynh, nhất là tại các tỉnh miền núi như Yên Bái.",
+    "link": "https://vnexpress.net/giao-duc-gioi-tinh-som-de-ngan-tre-em-sinh-ra-tre-em-4860533.html",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao cần giáo dục giới tính sớm cho trẻ em?",
+    "answers": [
+      {
+        "text": "Để ngăn trẻ em sinh ra trẻ em.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường kiến thức về sức khỏe tâm thần.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tỷ lệ học sinh bỏ học.",
+        "correct": false
+      },
+      {
+        "text": "Để cải thiện tình hình kinh tế gia đình.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một thành phố yêu cầu dạy tốt ngay lên lớp, hạn chế học thêm",
     "content": "Giám đốc Sở GD&ĐT TPHCM yêu cầu các trường nâng cao chất lượng giảng dạy chính khóa nhằm giảm thiểu nhu cầu học thêm của học sinh. Tại hội nghị giao ban, ông Nguyễn Văn Hiếu nhấn mạnh việc thực hiện Thông tư 29 về dạy thêm học thêm, yêu cầu các hiệu trưởng quán triệt nội dung này và đảm bảo hoạt động dạy thêm đúng quy định. Ông cũng nhấn mạnh không ép buộc học sinh tham gia các lớp học ngoài giờ và yêu cầu kiểm tra, rà soát việc phân công giáo viên để đảm bảo chất lượng giảng dạy.",
     "link": "https://dantri.com.vn/giao-duc/mot-thanh-pho-yeu-cau-day-tot-ngay-len-lop-han-che-hoc-them-20250312154438151.htm",
@@ -1228,33 +1255,6 @@
     ]
   },
   {
-    "title": "5 điều nên làm trước khi ngủ để cân bằng huyết áp",
-    "content": "Bài viết nêu rõ năm điều nên làm trước khi ngủ để giúp cân bằng huyết áp, bao gồm: hạn chế uống rượu, sử dụng thuốc theo chỉ định, thư giãn, tránh thực phẩm nhiều natri và giữ phòng ngủ mát mẻ. Những thói quen này không chỉ giúp hạ huyết áp mà còn giảm nguy cơ mắc các bệnh tim mạch và đột quỵ. Việc tạo dựng thói quen lành mạnh trước khi đi ngủ sẽ hỗ trợ cho sức khỏe tim mạch và giấc ngủ tốt hơn.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-truoc-khi-ngu-de-can-bang-huyet-ap-4860190.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Có những điều gì nên làm trước khi ngủ để cân bằng huyết áp?",
-    "answers": [
-      {
-        "text": "Hạn chế uống rượu, dùng thuốc theo chỉ định, thư giãn, tránh thực phẩm nhiều natri và giữ phòng ngủ mát mẻ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ uống trà và không ăn gì trước khi ngủ.",
-        "correct": false
-      },
-      {
-        "text": "Đi ngủ muộn và ăn nhiều đồ ngọt.",
-        "correct": false
-      },
-      {
-        "text": "Tập thể dục cường độ cao trước khi ngủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Atletico - Real: Bản lĩnh Nhà Vua",
     "content": "Trong trận lượt về vòng 1/8 Champions League, Atletico Madrid tiếp Real Madrid với hy vọng lật ngược tình thế sau khi đã thua 0-1 ở lượt đi. Atletico có lợi thế sân nhà và lịch sử tốt khi chưa thua tại sân nhà ở vòng knock-out Champions League suốt 28 năm qua. Dù vậy, Real Madrid là đội bóng mạnh với kỷ lục 15 danh hiệu Champions League và có tỷ lệ cao để đi tiếp. Các cầu thủ như Vinicius và Jude Bellingham gặp chấn thương có thể ảnh hưởng đến sức mạnh của Real trong trận đấu này.",
     "link": "https://vnexpress.net/atletico-real-ban-linh-nha-vua-4860338.html",
@@ -1277,6 +1277,33 @@
       },
       {
         "text": "Trận đấu sẽ kết thúc với tỷ số hòa mà không có đội nào ghi bàn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 điều nên làm trước khi ngủ để cân bằng huyết áp",
+    "content": "Bài viết nêu rõ năm điều nên làm trước khi ngủ để giúp cân bằng huyết áp, bao gồm: hạn chế uống rượu, sử dụng thuốc theo chỉ định, thư giãn, tránh thực phẩm nhiều natri và giữ phòng ngủ mát mẻ. Những thói quen này không chỉ giúp hạ huyết áp mà còn giảm nguy cơ mắc các bệnh tim mạch và đột quỵ. Việc tạo dựng thói quen lành mạnh trước khi đi ngủ sẽ hỗ trợ cho sức khỏe tim mạch và giấc ngủ tốt hơn.",
+    "link": "https://vnexpress.net/5-dieu-nen-lam-truoc-khi-ngu-de-can-bang-huyet-ap-4860190.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Có những điều gì nên làm trước khi ngủ để cân bằng huyết áp?",
+    "answers": [
+      {
+        "text": "Hạn chế uống rượu, dùng thuốc theo chỉ định, thư giãn, tránh thực phẩm nhiều natri và giữ phòng ngủ mát mẻ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ uống trà và không ăn gì trước khi ngủ.",
+        "correct": false
+      },
+      {
+        "text": "Đi ngủ muộn và ăn nhiều đồ ngọt.",
+        "correct": false
+      },
+      {
+        "text": "Tập thể dục cường độ cao trước khi ngủ.",
         "correct": false
       }
     ]
@@ -3597,28 +3624,32 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
     "answers": [
       {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "text": "Bệnh sởi",
         "correct": true
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "text": "Ngộ độc thực phẩm",
         "correct": false
       },
       {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "text": "Nhiễm trùng đường tiêu hóa",
         "correct": false
       },
       {
-        "text": "Chỉ làm đau lưng mà thôi.",
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
@@ -3651,32 +3682,28 @@
     ]
   },
   {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
     "answers": [
       {
-        "text": "Bệnh sởi",
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
         "correct": true
       },
       {
-        "text": "Ngộ độc thực phẩm",
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
         "correct": false
       },
       {
-        "text": "Nhiễm trùng đường tiêu hóa",
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
         "correct": false
       },
       {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -4327,6 +4354,68 @@
     ]
   },
   {
+    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
+    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
+    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
+    "answers": [
+      {
+        "text": "1.000 cửa hàng",
+        "correct": true
+      },
+      {
+        "text": "500 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "2.000 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "800 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "1.500 cửa hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
+    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
+    "answers": [
+      {
+        "text": "14 kg",
+        "correct": true
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sun World và Vietravel hợp tác chiến lược",
     "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
     "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
@@ -4380,68 +4469,6 @@
       },
       {
         "text": "Cung cấp dịch vụ mua sắm cao cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
-    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
-    "answers": [
-      {
-        "text": "14 kg",
-        "correct": true
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
-    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
-    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
-    "answers": [
-      {
-        "text": "1.000 cửa hàng",
-        "correct": true
-      },
-      {
-        "text": "500 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "2.000 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "800 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "1.500 cửa hàng",
         "correct": false
       }
     ]
@@ -4706,32 +4733,32 @@
     ]
   },
   {
-    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
-    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
-    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
+    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
+    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
+    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
+    "cat": "gia-dinh",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
     "answers": [
       {
-        "text": "Malaysia",
+        "text": "Hát Quốc ca Việt Nam",
         "correct": true
       },
       {
-        "text": "Việt Nam",
+        "text": "Đọc thơ bằng tiếng Nhật",
         "correct": false
       },
       {
-        "text": "Thái Lan",
+        "text": "Nhảy múa cùng cô dâu",
         "correct": false
       },
       {
-        "text": "Indonesia",
+        "text": "Chơi nhạc cụ truyền thống",
         "correct": false
       },
       {
-        "text": "Philippines",
+        "text": "Tổ chức tiệc lớn",
         "correct": false
       }
     ]
@@ -4764,32 +4791,32 @@
     ]
   },
   {
-    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
-    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
-    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
-    "cat": "gia-dinh",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
+    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
+    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
+    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
     "answers": [
       {
-        "text": "Hát Quốc ca Việt Nam",
+        "text": "Malaysia",
         "correct": true
       },
       {
-        "text": "Đọc thơ bằng tiếng Nhật",
+        "text": "Việt Nam",
         "correct": false
       },
       {
-        "text": "Nhảy múa cùng cô dâu",
+        "text": "Thái Lan",
         "correct": false
       },
       {
-        "text": "Chơi nhạc cụ truyền thống",
+        "text": "Indonesia",
         "correct": false
       },
       {
-        "text": "Tổ chức tiệc lớn",
+        "text": "Philippines",
         "correct": false
       }
     ]
