--- a/home.html
+++ b/home.html
@@ -341,6 +341,33 @@
     ]
   },
   {
+    "title": "Miền Bắc giảm nồm ẩm từ 15/3",
+    "content": "Theo dự báo từ Trung tâm Dự báo Khí tượng Thủy văn quốc gia, miền Bắc sẽ giảm nồm ẩm từ đêm 15/3 do ảnh hưởng của không khí lạnh. Trước đó, từ đầu tuần, miền Bắc đã trải qua thời tiết nhiều mây, mưa nhỏ và độ ẩm cao, gây cảm giác khó chịu. Nhiệt độ dự kiến sẽ giảm xuống còn 13-16 độ C, với vùng núi cao có thể dưới 10 độ C, và sẽ có mưa rào và giông trong giai đoạn này.",
+    "link": "https://vnexpress.net/mien-bac-giam-nom-am-tu-15-3-4861011.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Miền Bắc sẽ giảm nồm ẩm vào thời gian nào?",
+    "answers": [
+      {
+        "text": "Từ đêm 15/3",
+        "correct": true
+      },
+      {
+        "text": "Từ đầu tuần tới",
+        "correct": false
+      },
+      {
+        "text": "Vào giữa tháng 4",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 hội và hiệp hội kiến nghị tới Tổng Bí thư về bất cập công bố hợp quy hàng hóa",
     "content": "9 hội và hiệp hội ngành hàng tại Việt Nam đã gửi công văn kiến nghị tới Tổng Bí thư Tô Lâm về việc cần sửa đổi quy định công bố hợp quy sản phẩm hàng hóa. Họ cho rằng quy định này đang gây khó khăn cho doanh nghiệp và người tiêu dùng, làm giảm sức cạnh tranh hàng hóa. Các hội đề xuất bỏ quy định này và cải cách thể chế pháp luật để thúc đẩy sản xuất kinh doanh, đồng thời nhấn mạnh rằng nội dung của các dự thảo luật chưa đáp ứng được yêu cầu thực tiễn và hội nhập quốc tế.",
     "link": "https://tuoitre.vn/9-hoi-va-hiep-hoi-kien-nghi-toi-tong-bi-thu-ve-bat-cap-cong-bo-hop-quy-hang-hoa-20250313165241415.htm",
@@ -2957,6 +2984,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -2983,33 +3037,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -3436,37 +3463,6 @@
     ]
   },
   {
-    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
-    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
-    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
-    "cat": "suc-khoe",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
-    "answers": [
-      {
-        "text": "97 tuổi",
-        "correct": true
-      },
-      {
-        "text": "90 tuổi",
-        "correct": false
-      },
-      {
-        "text": "85 tuổi",
-        "correct": false
-      },
-      {
-        "text": "100 tuổi",
-        "correct": false
-      },
-      {
-        "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
     "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
     "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
@@ -3516,6 +3512,37 @@
       },
       {
         "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
+    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
+    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
+    "cat": "suc-khoe",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
+    "answers": [
+      {
+        "text": "97 tuổi",
+        "correct": true
+      },
+      {
+        "text": "90 tuổi",
+        "correct": false
+      },
+      {
+        "text": "85 tuổi",
+        "correct": false
+      },
+      {
+        "text": "100 tuổi",
+        "correct": false
+      },
+      {
+        "text": "92 tuổi",
         "correct": false
       }
     ]
@@ -4390,6 +4417,33 @@
     ]
   },
   {
+    "title": "Người bệnh suy giáp nên giảm cân thế nào",
+    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
+    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
+    "answers": [
+      {
+        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn thịt đỏ.",
+        "correct": false
+      },
+      {
+        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn rau quả hoàn toàn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -4416,33 +4470,6 @@
       },
       {
         "text": "Vấn đề tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người bệnh suy giáp nên giảm cân thế nào",
-    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
-    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
-    "answers": [
-      {
-        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn thịt đỏ.",
-        "correct": false
-      },
-      {
-        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
-        "correct": false
-      },
-      {
-        "text": "Tránh ăn rau quả hoàn toàn.",
         "correct": false
       }
     ]
@@ -4609,33 +4636,6 @@
       },
       {
         "text": "Vì nó không ảnh hưởng đến môi trường.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Một đại học ở Việt Nam có hàng loạt ngành lọt top thế giới",
-    "content": "Đại học Quốc gia TPHCM vừa công bố có 18 ngành học được xếp hạng cao trên bảng xếp hạng đại học theo ngành - World University Ranking by Subject 2025 do tổ chức QS thực hiện. Số ngành được xếp hạng đã tăng 7 so với năm 2024, trong đó có 1 ngành thuộc top 100 và 1 ngành thuộc top 200 thế giới. Những ngành học nổi bật bao gồm kỹ thuật dầu khí, kỹ thuật xây dựng, và khoa học máy tính.",
-    "link": "https://dantri.com.vn/giao-duc/mot-dai-hoc-o-viet-nam-co-hang-loat-nganh-lot-top-the-gioi-20250312180327546.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đại học nào ở Việt Nam có nhiều ngành lọt top thế giới?",
-    "answers": [
-      {
-        "text": "Đại học Quốc gia TPHCM",
-        "correct": true
-      },
-      {
-        "text": "Đại học Bách Khoa Hà Nội",
-        "correct": false
-      },
-      {
-        "text": "Đại học Kinh tế Quốc dân",
-        "correct": false
-      },
-      {
-        "text": "Đại học Ngoại thương",
         "correct": false
       }
     ]
